# whisper-service

./: .gitignore  README.md  pyproject.toml
deploy/: whisper.service
whisper_service/: config.py  main.py  tts.py  utils.py  whisper.py
