[tool.poetry]
name = "whisper-service"
version = "0.1.0"
description = ""
authors = ["Alexander Shtuchkin <ashtuchkin@gmail.com>"]
readme = "README.md"
packages = [{include = "whisper_service"}]

[tool.poetry.dependencies]
python = "3.10.x"
openai-whisper = "20230314"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
content-size-limit-asgi = "^0.1.5"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
